--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="dependencies\include\Eigen\src\Cholesky\LDLT.h" />
     <ClInclude Include="dependencies\include\Eigen\src\Cholesky\LLT.h" />
     <ClInclude Include="dependencies\include\Eigen\src\Cholesky\LLT_LAPACKE.h" />
@@ -454,6 +455,8 @@
     <ClInclude Include="dependencies\include\GL\glew.h" />
     <ClInclude Include="dependencies\include\GL\glxew.h" />
     <ClInclude Include="dependencies\include\GL\wglew.h" />
+    <ClInclude Include="RatTracer.h" />
+    <ClInclude Include="Ray.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="dependencies\lib\glew32s.lib" />
