--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -455,7 +455,7 @@
     <ClInclude Include="dependencies\include\GL\glew.h" />
     <ClInclude Include="dependencies\include\GL\glxew.h" />
     <ClInclude Include="dependencies\include\GL\wglew.h" />
-    <ClInclude Include="RatTracer.h" />
+    <ClInclude Include="RayTracer.h" />
     <ClInclude Include="Ray.h" />
   </ItemGroup>
   <ItemGroup>
