Added abstract class Surface, Added scene class that allows to ray trace more than one object, and did some changes in code style. For example, moved some of the code in the raytrace (render) method to main.

--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -455,9 +455,13 @@
     <ClInclude Include="dependencies\include\GL\glew.h" />
     <ClInclude Include="dependencies\include\GL\glxew.h" />
     <ClInclude Include="dependencies\include\GL\wglew.h" />
+    <ClInclude Include="PerspectiveCamera.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="RayTracer.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="Sphere.h" />
+    <ClInclude Include="Surface.h" />
+    <ClInclude Include="Scene.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="dependencies\lib\glew32s.lib" />
