Started diffuse shading

--- a/RayTracer/RayTracer.vcxproj
+++ b/RayTracer/RayTracer.vcxproj
@@ -141,6 +141,9 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Color.h" />
+    <ClInclude Include="LightSource.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="OrtographicCamera.h" />
     <ClInclude Include="dependencies\include\Eigen\src\Cholesky\LDLT.h" />
     <ClInclude Include="dependencies\include\Eigen\src\Cholesky\LLT.h" />
